# evolved_sprint_hackathon_2025

./: .gitignore  README.md  cxcr4_interactions.csv
analysis/: boltzgen_hotspots.py  fgcr4_interactions.csv  old_residue_analysis.py
backend/: API.md  Dockerfile  README.md  README_HACKATHON.md  alembic.ini  beetletert.cif  docker-compose.yml  docker-entrypoint.sh  optimize_binder.sh  pyproject.toml  server.py  settings.toml
backend/alembic/: env.py
backend/alembic/versions/: c1a832156193_added_initial_models.py  cb1e9421b41a_added_types.py  d87712e7a365_added_pipeline_name.py
backend/api/design/: models.py  routes.py  serializers.py  workflows.py
backend/binder_optimization/optimization/: pareto.py
backend/binder_optimization/output/: json_generator.py
backend/binder_optimization/selectivity/: README.md  scorer.py
backend/binder_optimization/visualization/: README.md  plots.py
backend/boltzgen/evolved_hackathon_backend.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/core/: config.py  postgres_db.py  redis.py
backend/dual_targets/: generate_multimer_yamls.py  get_input_boltzgen.py  run_predictions_and_summarize.py
backend/dual_targets/examples/: fcgr3.fasta  final_designs_metrics_25.csv
backend/evolved_hackathon_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/scripts/: create_scaffold.py  extract_chain.py  optimize_binder.py
ui/: .env.local  README.md  components.json  eslint.config.js  next.config.mjs  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
ui/public/: nebious.avif  nvidia.avif  site.webmanifest
ui/public/examples/dual_target/: 3AY4.cif
ui/src/app/: globals.css  layout.tsx  molstar.css
ui/src/app/(authenticated)/: layout.tsx  page.tsx
ui/src/components/: emoji-picker.tsx  file-upload-05.tsx  header.tsx  icons-social.tsx  icons.tsx  mobile-nav.tsx  mode-toggle.tsx  providers.tsx  theme-switcher.tsx
ui/src/components/ui/: accordion.tsx  alert-dialog.tsx  auth-modal.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  card.tsx  command.tsx  credits-display.tsx  dropdown-menu.tsx  form.tsx  input-otp.tsx  list-2.tsx  loading-spinner.tsx  markdown-content.tsx  menubar.tsx  popover.tsx  rainbow-button.tsx  resizable.tsx  select.tsx  sheet.tsx  skeleton.tsx  tabs.tsx  task-image-panel.tsx  textarea.tsx  toast.tsx  tooltip.tsx  typewriter.tsx
ui/src/config/: site.ts
ui/src/hooks/: use-config.ts  use-mutation-observer.ts  use-toast.ts
ui/src/lib/: fonts.ts  suppress-console-errors.ts  utils.ts
ui/src/registry/: registry-base-colors.ts  registry-styles.ts
ui/src/registry/base-colors/: blue.ts  gray.ts  green.ts  neutral.ts  orange.ts  red.ts  rose.ts  slate.ts  (+4 more)
(+39 files in other folders)
