[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evolved-hackathon-backend"
version = "0.1.0"
description = "Evolved Hackathon Backend"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.14.0",
    "attrs>=24.3.0",
    "dynaconf>=3.2.6",
    "motor>=3.6.1",
    "msgspec>=0.19.0",
    "openai>=1.59.3",
    "ory-client>=1.12.2",
    "Pillow>=10.0.0",
    "psutil>=6.1.1",
    "psycopg[binary]>=3.2.3",
    "redis>=5.2.1",
    "sanic[ext]>=24.12.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "pandas>=2.1.1",
    "imageio>=2.37.0",
    "boto3>=1.37.18",
    "rsa>=4.9",
    "cryptography>=44.0.2",
    "requests>=2.32.3",
    "rcsb-api>=1.4.1",
    "numpy==2.0.2",
    "numba==0.61.0",
    "matplotlib",
    "hydride",
    "biotite",
    "pydssp",
    "logomaker",
    "gemmi==0.6.5",
    "torch>=2.4.1",
    "scikit-learn",
    "hydra-core",
    "edit_distance",
    "pytorch-lightning",
    "rdkit",
    "pandas",
    "pdbeccdutils",
    "einx",
    "einops",
    "mashumaro",
    "nvidia-ml-py>=12.535.133",
    "cuequivariance_ops_cu12>=0.5.0",
    "cuequivariance_ops_torch_cu12>=0.5.0",
    "cuequivariance_torch>=0.5.0",
    "huggingface_hub",
    "biopython",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.5",
    "types-aiofiles>=24.1.0.20241221",
    "types-boto3>=1.37.18",
    "types-psutil>=6.1.0.20241221",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20250306",
    "typing-extensions>=4.12.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
boltzgen = ["resources/config/**/*"]

[project.scripts]
boltzgen = "boltzgen.cli.boltzgen:main"


[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic", "scripts"]


[tool.ruff]
target-version = "py312"
exclude = ["alembic", "venv", ".venv"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
